--- a/src/app/service-page/components/service-page/service-page.component.scss
+++ b/src/app/service-page/components/service-page/service-page.component.scss
@@ -379,6 +379,10 @@
     &_numeral {
       display: flex;
     }
+    .star-rating{
+      font-size: 18px;
+    line-height: 23px;
+    }
     &_number {
       position: relative;
       font-style: normal;
