--- a/src/app/shared/modules/categories-header/categories-header.component.scss
+++ b/src/app/shared/modules/categories-header/categories-header.component.scss
@@ -138,6 +138,11 @@
   &:hover {
     text-decoration: underline;
   }
+  &-group{
+    width: 300px;
+    margin-bottom: 20px;
+    padding-left: 10px;
+  }
 }
 
 @media (max-width: 1499px) {
