--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -169,38 +169,38 @@
       <div class="rating__wrapper"  *ngIf="userTypeFreelancer">
         <div class="rating__info-block">
           <div class="rating__name">Качество услуг</div>
-          <div class="star-rating">{{ userData.averageRating.freelancer.qualityMark}}</div>
+          <div class="star-rating" [ngClass]="{'empty-rating': userData.averageRating.freelancer.qualityMark == 0}">{{ userData.averageRating.freelancer.qualityMark}}</div>
         </div>
         <div class="rating__info-block">
           <div class="rating__name">Срок исполнения</div>
-          <div class="star-rating">{{ userData.averageRating.freelancer.termMark}}</div>
+          <div class="star-rating" [ngClass]="{'empty-rating': userData.averageRating.freelancer.termMark == 0}">{{ userData.averageRating.freelancer.termMark}}</div>
         </div>
         <div class="rating__info-block">
           <div class="rating__name">Вежливость фрилансера</div>
-          <div class="star-rating">{{ userData.averageRating.freelancer.politenessMark}}</div>
+          <div class="star-rating" [ngClass]="{'empty-rating': userData.averageRating.freelancer.politenessMark == 0}">{{ userData.averageRating.freelancer.politenessMark}}</div>
         </div>
         <div class="rating__info-block">
           <div class="rating__name">Средняя оценка</div>
-          <div class="star-rating">{{ userData.averageRating.freelancer.averageMark}}</div>
+          <div class="star-rating" [ngClass]="{'empty-rating': userData.averageRating.freelancer.averageMark == 0}">{{ userData.averageRating.freelancer.averageMark}}</div>
           <span class="comments-count">( {{ userData.comments_freelancer_count}} отзывов):</span>
         </div>
       </div>
       <div class="rating__wrapper"  *ngIf="!userTypeFreelancer">
         <div class="rating__info-block">
           <div class="rating__name">Постановка задачи</div>
-          <div class="star-rating">{{ userData.averageRating.customer.taskClarity}}</div>
+          <div class="star-rating" [ngClass]="{'empty-rating': userData.averageRating.customer.taskClarity == 0}">{{ userData.averageRating.customer.taskClarity}}</div>
         </div>
         <div class="rating__info-block">
           <div class="rating__name">Чёткость требований</div>
-          <div class="star-rating">{{ userData.averageRating.customer.requirementsClarity}}</div>
+          <div class="star-rating" [ngClass]="{'empty-rating': userData.averageRating.customer.requirementsClarity == 0}">{{ userData.averageRating.customer.requirementsClarity}}</div>
         </div>
         <div class="rating__info-block">
           <div class="rating__name">Контактность</div>
-          <div class="star-rating">{{ userData.averageRating.customer.contactLevel}}</div>
+          <div class="star-rating" [ngClass]="{'empty-rating': userData.averageRating.customer.contactLevel == 0}">{{ userData.averageRating.customer.contactLevel}}</div>
         </div>
         <div class="rating__info-block">
           <div class="rating__name">Средняя оценка</div>
-          <div class="star-rating">{{ userData.averageRating.customer.averageMark}}</div>
+          <div class="star-rating" [ngClass]="{'empty-rating': userData.averageRating.customer.averageMark == 0}">{{ userData.averageRating.customer.averageMark}}</div>
           <span class="comments-count">( {{ userData.comments_freelancer_count}} отзывов):</span>
         </div>
       </div>
