--- a/src/app/chat/components/chat-component/chat-component.html
+++ b/src/app/chat/components/chat-component/chat-component.html
@@ -18,7 +18,7 @@
   <section class="collocutors-tools">
     <!-- right chat bar -->
     <app-messenger-tools *ngIf="chatType === 'work' && collocutorData"></app-messenger-tools>
-    <app-collocutor-information *ngIf="chatType === 'classic' && collocutorData" [collocutorData]="collocutorData">
+    <app-collocutor-information *ngIf="chatType === 'classic' && collocutorData">
     </app-collocutor-information>
 
   </section>
