--- a/src/app/chat/components/message-list/message-list.component.scss
+++ b/src/app/chat/components/message-list/message-list.component.scss
@@ -114,7 +114,7 @@
     display: block;
     opacity: 0.5;
     color: #33596e;
-    font-family: "Source Sans Pro";
+    font-family: "Source Sans Pro", sans-serif;
     font-size: 14px;
     font-weight: 400;
     letter-spacing: 0.1px;
