--- a/src/app/shared/modules/system-messages/system-messages.component.scss
+++ b/src/app/shared/modules/system-messages/system-messages.component.scss
@@ -63,7 +63,7 @@
     box-sizing: border-box;
   }
   .notifications-list{
-    font-family: 'Source Sans Pro';
+    font-family: 'Source Sans Pro', sans-serif;
     overflow: scroll;
     max-height: 500px;
     padding-right: 0px;
