--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -382,7 +382,7 @@
       display: none;
     }
     .radio-title {
-      font-family: "Source Sans Pro";
+      font-family: "Source Sans Pro", sans-serif;
       font-style: normal;
       font-weight: normal;
       font-size: 16px;
