--- a/src/app/catalog-page/catalog-home-page/catalog-home-page.component.scss
+++ b/src/app/catalog-page/catalog-home-page/catalog-home-page.component.scss
@@ -24,7 +24,7 @@
   width: 20%;
   box-sizing: border-box;
   &-name{
-    font-family: "Source Sans Pro";
+    font-family: "Source Sans Pro", sans-serif;
     font-weight: 600;
     font-size: 18px;
     line-height: 20px;
@@ -34,7 +34,7 @@
   .subcategory-name{
     margin-bottom: 12px;
     a{
-      font-family: "Source Sans Pro";
+      font-family: "Source Sans Pro", sans-serif;
       font-weight: normal;
       font-size: 16px;
       line-height: 20px;
