--- a/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.html
+++ b/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.html
@@ -160,7 +160,7 @@
 
   <div class="filter-chips" *ngIf="catalogFilters">
     <div class="filter-chips-list">
-      <ng-container *ngFor='let filter of catalogFilters | keyvalue'>
+      <!-- <ng-container *ngFor='let filter of catalogFilters | keyvalue'>
         <div class="filter-chips-val" *ngIf="
                           filter.value !== undefined &&
                           filter.value !== false &&
@@ -187,7 +187,7 @@
 
           </button>
         </div>
-      </ng-container>
+      </ng-container> -->
     </div>
 
   </div>
