--- a/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.scss
+++ b/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.scss
@@ -31,7 +31,7 @@
     p {
       margin: 0;
       padding: 16px;
-      font-family: "Source Sans Pro";
+      font-family: "Source Sans Pro", sans-serif;
       font-style: normal;
       font-weight: normal;
       font-size: 16px;
@@ -90,7 +90,7 @@
     }
 
     .filter-text {
-      font-family: "Source Sans Pro";
+      font-family: "Source Sans Pro", sans-serif;
       font-style: normal;
       font-weight: normal;
       font-size: 16px;
