--- a/src/app/catalog-page/catalog/catalog.component.scss
+++ b/src/app/catalog-page/catalog/catalog.component.scss
@@ -29,7 +29,7 @@
     }
     a{
       text-decoration: none;
-      font-family: "Source Sans Pro";
+      font-family: "Source Sans Pro", sans-serif;
       font-weight: normal;
       font-size: 14px;
       line-height: 18px;
@@ -51,7 +51,7 @@
   }
 }
 .section-title{
-  font-family: "Source Sans Pro";
+  font-family: "Source Sans Pro", sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 48px;
