--- a/src/app/chat/components/messenger-tools/messenger-tools.component.scss
+++ b/src/app/chat/components/messenger-tools/messenger-tools.component.scss
@@ -37,11 +37,12 @@
       box-shadow: none;
       border: none;
       box-sizing: border-box;
-      padding: 14px 9px 14px 42px;
+      padding: 14px 0;
       text-align: left;
       outline: none;
       cursor: pointer;
-
+      text-align: center;
+      justify-content: center;
       &:not(:last-of-type) {
         margin-bottom: 12px;
       }
