--- a/src/app/chat/components/messenger/messenger.component.scss
+++ b/src/app/chat/components/messenger/messenger.component.scss
@@ -140,7 +140,7 @@
         width: 100%;
         height: 60px;
         // color: #a6a7a8;
-        font-family: "Source Sans Pro";
+        font-family: "Source Sans Pro", sans-serif;
         font-size: 16px;
         font-weight: 400;
         line-height: 20px;
