--- a/src/app/chat/components/show-uploaded-files/show-uploaded-files.component.scss
+++ b/src/app/chat/components/show-uploaded-files/show-uploaded-files.component.scss
@@ -136,7 +136,7 @@
       }
       // span {
       //   color: #323c47;
-      //   font-family: "Source Sans Pro";
+      //   font-family: "Source Sans Pro", sans-serif;
       //   font-size: 14px;
       //   font-weight: 400;
       //   line-height: 18px;
