--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/home-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/home-user-settings.component.scss
@@ -21,7 +21,7 @@ h1{
       color: #323C47;
       font-style: normal;
       font-weight: normal;
-      font-family: "Source Sans Pro";
+      font-family: "Source Sans Pro", sans-serif;
     }
     &-active{
       .mat-tab-label-content{
