--- a/src/app/service-page/components/service-page/service-page.component.scss
+++ b/src/app/service-page/components/service-page/service-page.component.scss
@@ -71,7 +71,7 @@
     }
     a{
       text-decoration: none;
-      font-family: "Source Sans Pro";
+      font-family: "Source Sans Pro", sans-serif;
       font-weight: normal;
       font-size: 14px;
       line-height: 18px;
@@ -112,7 +112,7 @@
 //     }
 //     a {
 //       text-decoration: none;
-//       font-family: "Source Sans Pro";
+//       font-family: "Source Sans Pro", sans-serif;
 //       font-weight: normal;
 //       font-size: 14px;
 //       line-height: 18px;
@@ -411,7 +411,7 @@
       padding-left: 5px;
     }
     .comments-count{
-      font-family: "Source Sans Pro";
+      font-family: "Source Sans Pro", sans-serif;
       font-size: 16px;
       line-height: 20px;
       color: #99ACB7;
